# ml-tech-assessment

./: pyproject.toml
app/: main.py
app/config/: openai.py
app/models/: transcript.py
app/routes/: endpoints.py
app/services/: transcript_service.py
app/storage/: memory_repository.py
